--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
 .App {
+  width: 500px;
+  margin: 10px auto;
+  padding: 20px;
+}
+.container {
+  border: 1px solid #dadde1;
+  border-radius: 4px;
+}
+.App-header {
+  align-items: left;
+  justify-content: left;
+}
+h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+.Temp {
+  padding: 10px;
+  text-align: left;
+}
+
+.temp {
+  position: relative;
+  top: 10px;
+}
+.units {
+  font-size: 14px;
+  position: relative;
+  bottom: 20px;
+}
+
+.temperature {
+  font-size: 44px;
+  font-weight: bold;
+}
+
+.main-info {
+  text-align: left;
+  color: #878787;
+  font: arial, helvetica, sans-serif;
+  margin: 0 10px 0;
+  font-size: 14px;
+}
+
+.more-info {
+  text-align: left;
+  color: #878787;
+  font: arial, helvetica, sans-serif;
+  padding: 30px;
+}
+ul {
+  list-style: none;
+}
+.li {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.City {
+  font-size: 24px;
+  font-weight: bold;
+}
+.description {
+  text-transform: capitalize;
+}
+.current-time .description {
+  font-size: 18px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-footer {
+  font-size: 12px;
 }
