--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  width: 500px;
+  width: 450px;
   margin: 10px auto;
   padding: 20px;
 }
@@ -48,7 +48,8 @@ h1 {
   text-align: left;
   color: #878787;
   font: arial, helvetica, sans-serif;
-  padding: 30px;
+  margin: 0;
+  padding: 30px 0 30px 60px;
 }
 ul {
   list-style: none;
